[add] 튤립, 배경 구현

--- a/index.html
+++ b/index.html
@@ -25,11 +25,51 @@
         <div class="nose"></div>
         <div class="mouth left"></div>
         <div class="mouth right"></div>
+        <div class="mouthbottom"></div>
         <div class="arm left"></div>
         <div class="arm right"></div>
     </div>
-    <div class="tulip">
+    <div class="tulip one">
+        <div class="flower">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="center"></div>
+        </div>
 
+        <div class="stem"></div>
+        <div class="leaf left"></div>
+        <div class="leaf right"></div>
+        <div class="eye left"></div>
+        <div class="eye right"></div>
+        <div class="mouthbottom"></div>
+    </div>
+    <div class="tulip two">
+        <div class="flower">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="center"></div>
+        </div>
+
+        <div class="stem"></div>
+        <div class="leaf left"></div>
+        <div class="leaf right"></div>
+        <div class="eye left"></div>
+        <div class="eye right"></div>
+        <div class="mouthbottom"></div>
+    </div>
+    <div class="tulip three">
+        <div class="flower">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="center"></div>
+        </div>
+
+        <div class="stem"></div>
+        <div class="leaf left"></div>
+        <div class="leaf right"></div>
+        <div class="eye left"></div>
+        <div class="eye right"></div>
+        <div class="mouthbottom"></div>
     </div>
 
 </div>
